[package]
name = "concurrency_toolkit"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
version = "0.1.2"
edition = "2018"
resolver = "2"

license-file = "LICENSE"
description = "Enable switching between std::sync, tokio::sync and loom::sync"
repository = "https://github.com/NobodyXu/concurrency_toolkit"

keywords = ["concurrency", "loom", "async", "tokio"]
categories = ["concurrency", "development-tools::build-utils", "asynchronous"]


[features]
default = ["maybe-async/is_sync"]
async_tokio = ["tokio"]
permutation_testing = ["loom", "maybe-async/is_sync"]

[dependencies]
tokio = { version = "1.9", features = ["sync"], optional = true }
loom = { version = "0.5.1", optional = true }
maybe-async = "0.2.6"

[dev-dependencies]
tokio = { version = "1.9", features = ["rt", "macros"] }
