[package]
name = "concurrency_toolkit"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
version = "0.2.2"
edition = "2018"
resolver = "2"

license-file = "LICENSE"
description = "Enable switching between std::sync, tokio::sync and loom::sync"
repository = "https://github.com/NobodyXu/concurrency_toolkit"

keywords = ["concurrency", "loom", "async", "tokio"]
categories = ["concurrency", "development-tools::build-utils", "asynchronous"]

[workspace]
members = ["proc_macro_test"]

[features]
default = ["maybe-async/is_sync", "proc_macro_test/default"]
async_tokio = ["tokio", "proc_macro_test/async_tokio"]
permutation_testing = ["loom", "maybe-async/is_sync", "proc_macro_test/permutation_testing"]

[dependencies]
tokio = { version = "1.9", features = ["sync", "rt", "macros"], optional = true }
loom = { version = "0.5.1", optional = true }
maybe-async = "0.2.6"
proc_macro_test = { version = "0.1.2", path = "proc_macro_test", default-features = false }
